force-app/main/default/objects/Community__c/Community__c.object-meta.xml
<CustomObject>
    <label>Data Domain</label>
    <nameField>
        <label>Data Domain Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Domains</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>