force-app/main/default/objects/Community__c/fields/Community__c.field-meta.xml
<CustomField>
    <fullName>Community__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>Community__c</referenceTo>
    <relationshipLabel>Data Domains</relationshipLabel>
    <relationshipName>Community</relationshipName>
    <type>Lookup</type>
</CustomField>