force-app/main/default/objects/Community__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <formula>IF(
  ISBLANK(Community__c),
  Name,
  Community__r.Name &amp; &quot; &gt; &quot; &amp; Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>