force-app/main/default/objects/Community__c/fields/Full_Name_Link__c.field-meta.xml
<CustomField>
    <fullName>Full_Name_Link__c</fullName>
    <formula>HYPERLINK(&quot;/?sort=&quot; &amp; Full_Name__c &amp; &quot; &gt; AAA&quot;, &quot;&quot;, &quot;_parent&quot;) &amp; 
HYPERLINK(&quot;/&quot; &amp; Id, Full_Name__c ,&quot;_parent&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Domain Full Name</label>
    <type>Text</type>
</CustomField>