force-app/main/default/objects/Community__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Full_Name_Link__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>